// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardDecorator renders 1`] = `
<div
  className="Card card"
  onClick={[Function]}
>
  <LazyLoad
    height={100}
    offset={100}
    once={true}
    overflow={false}
    resize={false}
    scroll={true}
    unmountIfInvisible={false}
  >
    <img
      alt="Cover"
      className="Card-cover card-img-top"
      src="https://k60.kn3.net/taringa/0/C/B/5/A/D/9AA.png"
    />
  </LazyLoad>
</div>
`;

exports[`CardDecorator renders as a link 1`] = `
<div
  className="Card card link"
  onClick={[Function]}
>
  <LazyLoad
    height={64}
    offset={100}
    once={true}
    overflow={false}
    resize={false}
    scroll={true}
    unmountIfInvisible={false}
  >
    <img
      alt="Avatar"
      className="Card-avatar rounded"
      src="https://placehold.it/64"
    />
  </LazyLoad>
  <LazyLoad
    height={100}
    offset={100}
    once={true}
    overflow={false}
    resize={false}
    scroll={true}
    unmountIfInvisible={false}
  >
    <img
      alt="Cover"
      className="Card-cover card-img-top"
      src="https://placehold.it/600x200"
    />
  </LazyLoad>
  bar
</div>
`;

exports[`CardDecorator renders with custom params 1`] = `
<div
  className="Card card foo"
  onClick={[Function]}
>
  <LazyLoad
    height={64}
    offset={100}
    once={true}
    overflow={false}
    resize={false}
    scroll={true}
    unmountIfInvisible={false}
  >
    <img
      alt="Avatar"
      className="Card-avatar rounded"
      src="https://placehold.it/64"
    />
  </LazyLoad>
  <LazyLoad
    height={100}
    offset={100}
    once={true}
    overflow={false}
    resize={false}
    scroll={true}
    unmountIfInvisible={false}
  >
    <img
      alt="Cover"
      className="Card-cover card-img-top"
      src="https://placehold.it/600x200"
    />
  </LazyLoad>
  bar
</div>
`;
